fix déclaration manifest

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="best game ever">
 	<title>Sequence</title>
+	<!-- Manifest -->
+	<link rel="manifest" type="text/css" href="./manifest.json" />
+	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" href="app.css">
 	<link rel="stylesheet" type="text/css" href="board/board.css">
 	<link rel="stylesheet" type="text/css" href="stats/stats.css">
 	<link rel="stylesheet" type="text/css" href="ring/ring.css">
 	<link rel="stylesheet" type="text/css" href="graph/graph.css">
 	<link rel="stylesheet" type="text/css" href="home/home.css">
+	<!-- Libraries -->
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
+	<!-- app -->
 	<script src="globals.js"></script>
 	<script src="board/board.js"></script>
 	<script src="stats/stats.js"></script>
